# calliope-cli

./: .gitignore  Makefile  README.md  pyproject.toml
src/calliope_cli/: __init__.py  agentspec.py  app.py  cli.py  config.py  constant.py  exception.py  llm.py  metadata.py  session.py  share.py
src/calliope_cli/agents/default/: agent.yaml  system.md
src/calliope_cli/core/: __init__.py  agent.py  calliopecore.py  context.py  message.py  runtime.py  toolset.py
src/calliope_cli/prompts/: __init__.py  init.md
src/calliope_cli/tools/: __init__.py  outline.py  rewrite.py  summarize.py  task.py  todo.py  utils.py
src/calliope_cli/tools/file/: __init__.py  read.py  read_sample.md  read_sample.py  sample.py  split.py  split_to_workspace.md  split_to_workspace.py  write.py
src/calliope_cli/tools/rag/: __init__.py  index.py  search.py
src/calliope_cli/ui/: __init__.py
src/calliope_cli/ui/chat/: __init__.py  app.py  completers.py  metacmd.py
src/calliope_cli/ui/print/: __init__.py  visualize.py
src/calliope_cli/utils/: __init__.py  logging.py  message.py  path.py  string.py
tests/: test_smoke.py
